# DynamicGNN-ECG-Classification

./: .gitignore  README.md  config.py  environment.yml  evaluate.py  preprocess_data.py  pyproject.toml  requirements.txt  setup.py  train.py
ecg_env/: pyvenv.cfg
ecg_env/Scripts/: activate  activate.bat  jsonpointer
models/: dynamic_ecg_model.py
modules/: module1_features.py  module2_graph.py  module3_gcn.py  module4_classifier.py
results/: test_results.txt
utils/: metrics.py
