[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgllnet-ecg-classification"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@university.edu"},
]
description = "Task-Guided Lead Correlation Learning for Multi-label ECG Classification"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DineshFoujdar/DynamicGNN-ECG-Classification"
Repository = "https://github.com/DineshFoujdar/DynamicGNN-ECG-Classification.git"